# agents-from-scratch

./: pyproject.toml
open_agents/: __init__.py  version.py
open_agents/agents/: __init__.py  function_call_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py  tool_aware_agent.py
open_agents/context/: __init__.py  builder.py
open_agents/core/: __init__.py  agent.py  config.py  database_config.py  exceptions.py  llm.py  message.py
open_agents/evaluation/: __init__.py
open_agents/evaluation/benchmarks/: __init__.py
open_agents/evaluation/benchmarks/bfcl/: __init__.py  bfcl_integration.py  dataset.py  evaluator.py  metrics.py
open_agents/evaluation/benchmarks/data_generation/: __init__.py  dataset.py  llm_judge.py  win_rate.py
open_agents/evaluation/benchmarks/gaia/: __init__.py  dataset.py  evaluator.py  metrics.py
open_agents/memory/: __init__.py  base.py  embedding.py  manager.py
open_agents/memory/rag/: __init__.py  document.py  pipeline.py
open_agents/memory/storage/: __init__.py  document_store.py  neo4j_store.py  qdrant_store.py
open_agents/memory/types/: __init__.py  episodic.py  perceptual.py  semantic.py  working.py
open_agents/protocols/: __init__.py  base.py
open_agents/rl/: __init__.py  utils.py
open_agents/tools/: __init__.py  async_executor.py  chain.py  registry.py
open_agents/tools/builtin/: __init__.py  bfcl_evaluation_tool.py  gaia_evaluation_tool.py  llm_judge_tool.py  mcp_wrapper_tool.py  memory_tool.py  protocol_tools.py  rag_tool.py  rl_training_tool.py  search_tool.py  win_rate_tool.py
open_agents/utils/: logging.py
